--- a/css/tagpack.css
+++ b/css/tagpack.css
@@ -107,3 +107,23 @@ ub {
     display: inline-block;
     
 }
+container {
+    display: block;
+    width: 600px;
+    height: 300px;
+    background-color: fuchsia;
+}
+.item {
+    width: 300px;
+    height: 200px;
+}
+left {
+/*    requires paste*/
+    display: inlineblock;
+    background-color:red;
+}
+right {
+/*    requires paste*/
+    display: block;
+    background-color: green;
+}
