--- a/css/tagpack.css
+++ b/css/tagpack.css
@@ -112,6 +112,7 @@ container {
     width: 600px;
     height: 300px;
     background-color: fuchsia;
+    position: sticky;
 }
 .item {
     width: 300px;
